[package]
name = "grpcknock"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
description = "A small gRPC health check probe for containers and Kubernetes"
repository = "https://github.com/nullmonger/grpcknock"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["grpc", "healthcheck", "cli", "kubernetes", "probe"]
categories = ["command-line-utilities"]
include = ["src/**", "README.md", "LICENSE"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.14.6", features = ["tls-ring", "tls-native-roots"] }
tonic-health = "0.14.6"



